[package]
name = "fourier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = {version = "0.15", features = ["jack"]}
num-complex = "0.4"
rustfft = "6.1"
poloto = "18.0"
usvg = "0.30"
tiny-skia = "0.8.3"
web-view = "0.7"